@@ -53,16 +53,15 @@ namespace PloppableRICO
                 }
                 else if (lastSelection != null)
                 {
-                    Panel.SelectBuilding(lastSelection);
-
                     // Restore previous filter state.
                     if (lastFilter != null)
                     {
                         Panel.SetFilter(lastFilter);
                     }
 
-                    // Restore previous building selection list postion and selected item.
+                    // Restore previous building selection list postion and selected item (specifically in that order to ensure correct item is selected).
                     Panel.SetListPosition(lastIndex, lastPostion);
+                    Panel.SelectBuilding(lastSelection);
                 }
 
                 Panel.Show();
